# kallia-home

./: .gitignore  CLAUDE.md  pyproject.toml
core/: settings.py  urls.py
hardware_tests/: test_create_user.py  test_face_detection.py  test_opencv_camera.py  test_picamera.py  test_recognition.py
network/services/: wifi_service.py
users/: models.py
users/migrations/: 0001_initial.py
users/services/: __init__.py  create_user_service.py  tts_service.py
vision/services/: __init__.py  face_recognition_service.py
widgets/: models.py  urls.py  views.py
widgets/management/: __init__.py
widgets/management/commands/: update_widgets_job.py
widgets/migrations/: 0001_initial.py
widgets/services/: __init__.py  mirror_state.py  news_service.py  weather_service.py
widgets/templates/widgets/: mirror.html
