[project]
name = "kallia-home"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.4",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "edge-tts>=7.2.8",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "qrcode>=8.2",
    "requests>=2.33.1",
]
